syntax = "proto3";

option go_package = "github.com/DanielHernandezO/p2p/client/internal/infrastructure/config";

message FileRequested{
    string id=1;
    string name=2;
    string ip_response=3;
    string port_response=4;
}

message Response{
    string message=1;
}

message JoinRequest{
    string ip=1;
    string port=2;
}

message JoinPeersRequest{
    string ip=1;
    string port=2;
    map<string, string> peers = 3;
}

message Peers{
    map<string, string> peers = 1;
}

message VoidRequest{}


service SearchFile{
    rpc Search(FileRequested) returns (Response);
}

service Join{
    rpc ExecuteJoin(JoinPeersRequest) returns (Response);
    rpc Join(JoinRequest) returns (Response);
}

service Fetch{
    rpc ExecuteFetch(VoidRequest) returns (Peers);
    rpc Fetch(VoidRequest) returns (Peers);
}